hphp/hack/test/typecheck/this_as_argument.php.exp
File "this_as_argument.php", line 20, characters 18-19:
Invalid argument (Typing[4110])
File "this_as_argument.php", line 20, characters 5-5:
This is an object of exactly the class C
File "this_as_argument.php", line 20, characters 5-5:
  where the class 'C' was referenced here
File "this_as_argument.php", line 9, characters 24-24:
It is incompatible with an object of type C
